Match macOS styling

--- a/index.html
+++ b/index.html
@@ -121,3 +121,5 @@ namespace track-watcher-rev0.2
 # Code Update 1760494984-11713
 
 # Code Update 1760494984-19066
+
+# Code Update 1760494984-13855
