chore: update index.html

--- a/index.html
+++ b/index.html
@@ -129,3 +129,5 @@ namespace track-watcher-rev0.2
 # Code Update 1760494984-21006
 
 # Code Update 1760494984-30940
+
+# Code Update 1760494984-31987
